adding lxml 4 9 3 to requierements and modifying the path of the data and images

--- a/Projects/App_001_001/App_001.md
+++ b/Projects/App_001_001/App_001.md
@@ -6,6 +6,7 @@ Web App that shows the Stock Closing Price and Volume for a specific company.
 ### Requirements
 
 Python==3.10.12
+lxml==4.9.3
 pandas==2.0.3
 streamlit==1.26.0
 yfinance==0.2.26
