--- a/Projects/App_002_001/App_002.md
+++ b/Projects/App_002_001/App_002.md
@@ -15,6 +15,7 @@ The App outputs the count of each of the four nucleotide bases of the input sequ
 
 Python==3.10.12
 altair==5.0.1
+lxml==4.9.3
 matplotlib==3.5.1
 numpy==1.24.4
 pandas==2.0.3
